--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "rete-context-menu-plugin",
   "version": "0.6.0",
   "description": "",
-  "main": "build/context-menu-plugin.common.js",
-  "module": "build/context-menu-plugin.esm.js",
+  "main": "./build/context-menu-plugin.min.js",
+  "module": "./build/context-menu-plugin.esm.js",
   "scripts": {
     "build": "rete --build rete.config.js",
     "build:dev": "rete --build rete.config.js --watch",
@@ -16,7 +16,10 @@
     "url": "https://github.com/retejs/context-menu-plugin.git"
   },
   "dependencies": {
+    "ansi-regex": "^6.0.1",
+    "babel-preset-env": "^1.7.0",
     "lodash-es": "4.17.15",
+    "node-sass": "^8.0.0",
     "vue": "2.5.17"
   },
   "devDependencies": {
